// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches last approved render (cart: 1:1 2:1) 1`] = `
<div>
  <div
    class="testing-mock"
  >
    <div
      class="checkout-backdrop"
    >
      <section
        class="checkout"
      >
        <h1>
          Your Cart:
        </h1>
        <div
          class="checkout-main"
        >
          <div
            aria-label="Current Cart"
            class="checkout-cart"
          >
            <article
              class="checkout-product"
            >
              <img
                src=""
              />
              <div
                class="product-info"
              >
                <div
                  class="product-name"
                >
                  TestProduct
                </div>
                <div
                  class="price"
                >
                  $ 
                  451
                </div>
              </div>
              <div
                class="buy-controls"
              >
                <div
                  class="select-count"
                >
                  <button
                    aria-label="decrease"
                  >
                    <svg
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
                      />
                    </svg>
                  </button>
                  <span>
                    1
                  </span>
                  <button
                    aria-label="increase"
                  >
                    +
                  </button>
                </div>
              </div>
            </article>
            <article
              class="checkout-product"
            >
              <img
                src=""
              />
              <div
                class="product-info"
              >
                <div
                  class="product-name"
                >
                  NestProduct
                </div>
                <div
                  class="price"
                >
                  $ 
                  100
                </div>
              </div>
              <div
                class="buy-controls"
              >
                <div
                  class="select-count"
                >
                  <button
                    aria-label="decrease"
                  >
                    <svg
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M19,4H15.5L14.5,3H9.5L8.5,4H5V6H19M6,19A2,2 0 0,0 8,21H16A2,2 0 0,0 18,19V7H6V19Z"
                      />
                    </svg>
                  </button>
                  <span>
                    1
                  </span>
                  <button
                    aria-label="increase"
                  >
                    +
                  </button>
                </div>
              </div>
            </article>
          </div>
          <div
            class="checkout-decide"
          >
            <ul
              class="checkout-info"
            >
              <li>
                <label
                  for="checkout-total"
                >
                  Total: 
                </label>
                <span
                  id="checkout-total"
                >
                  551
                  $
                </span>
              </li>
            </ul>
            <button
              class="checkout"
            >
              Purchase
            </button>
            <button
              class="continue"
            >
              Continue Shopping
            </button>
          </div>
        </div>
      </section>
    </div>
  </div>
</div>
`;

exports[`matches last approved render (cart: 1:3) 1`] = `
<div>
  <div
    class="testing-mock"
  >
    <div
      class="checkout-backdrop"
    >
      <section
        class="checkout"
      >
        <h1>
          Your Cart:
        </h1>
        <div
          class="checkout-main"
        >
          <div
            aria-label="Current Cart"
            class="checkout-cart"
          >
            <article
              class="checkout-product"
            >
              <img
                src=""
              />
              <div
                class="product-info"
              >
                <div
                  class="product-name"
                >
                  TestProduct
                </div>
                <div
                  class="price"
                >
                  $ 
                  451
                </div>
              </div>
              <div
                class="buy-controls"
              >
                <div
                  class="select-count"
                >
                  <button
                    aria-label="decrease"
                  >
                    -
                  </button>
                  <span>
                    3
                  </span>
                  <button
                    aria-label="increase"
                  >
                    +
                  </button>
                </div>
              </div>
            </article>
          </div>
          <div
            class="checkout-decide"
          >
            <ul
              class="checkout-info"
            >
              <li>
                <label
                  for="checkout-total"
                >
                  Total: 
                </label>
                <span
                  id="checkout-total"
                >
                  451
                  $
                </span>
              </li>
            </ul>
            <button
              class="checkout"
            >
              Purchase
            </button>
            <button
              class="continue"
            >
              Continue Shopping
            </button>
          </div>
        </div>
      </section>
    </div>
  </div>
</div>
`;
